fix: 精简友链提交并加固审核流程